k8s/common/bongateway-k8s/bongateway-deployment.yml
# kubectl label nodes scw-k8s-bonlimousin-default-aa391bf1f0d242a196 bonlimousin.com/bongateway=prod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bongateway
  namespace: bonlimousin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bongateway
      version: 'v1'
  template:
    metadata:
      labels:
        app: bongateway
        version: 'v1'
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: bonlimousin.com/bongateway
                    operator: In
                    values:
                      - prod
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - bongateway
                topologyKey: kubernetes.io/hostname
              weight: 100      
      containers:
        - name: bongateway-app
          image: frostmark/bongateway
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: '1Gi'
              cpu: '1'
            limits:
              memory: '1.75Gi'
              cpu: '2'
          ports:
            - name: http
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
