k8s/common/bongateway-k8s/bongateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bongateway
  namespace: bonlimousin
  labels:
    app: bongateway
spec:
  selector:
    app: bongateway
  type: ClusterIP
  ports:
    - name: http
      port: 9000
    #- port: 80
    #  targetPort: 9000
    #  protocol: TCP
    #  name: http
