k8s/common/bongateway-k8s/bongateway-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bongateway
  namespace: bonlimousin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: bon-letsencrypt-prod
spec:
  tls:
  - hosts:
    -  beta.limousin.se
    -  limousin.se
    -  www.limousin.se
    secretName: beta-limousin-se-tls
  rules:    
    - host: bongateway.bonlimousin.393a4c58-1580-4f08-89d7-15f104acfc8e.nodes.k8s.fr-par.scw.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: bongateway
              servicePort: 9000     
    - host: beta.limousin.se
      http:
        paths:
          - path: /
            backend:
              serviceName: bongateway
              servicePort: 9000
    - host: limousin.se
      http:
        paths:
          - path: /
            backend:
              serviceName: bongateway
              servicePort: 9000
    - host: www.limousin.se
      http:
        paths:
          - path: /
            backend:
              serviceName: bongateway
              servicePort: 9000
